# optparse-th

./: README.md  TH.hs  optparse-th.cabal  test.hs
Options/Applicative/: TH.hs
test/: driver.hs
test/cases/arg-auto/: 1.in  arg-auto.hs
test/cases/command-args/: 0.in  0.out  1.in  1.out  2.in  command-args.hs
test/cases/command-only/: 1.out  command-only.hs
