name:                optparse-th
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Options.Applicative.TH

  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
