name:                optparse-th
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Options.Applicative.TH

  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  build-depends:
      base
    , template-haskell
    , optparse-applicative

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             driver.hs
  build-depends:
      base
    , hspec
    , process
    , filepath
    , directory
